# contact-form-agent

./: .gitignore  package-lock.json
contact-agent-mvp/: .env.local  CLOUD_UI_CLIENT_EXECUTION.md  README.md  next.config.js  package-lock.json  package.json
content-agent2/: AI.yml  INSTALL.md  README.md  auto_select_patch.diff  auto_select_pref_fix.patch  form_filler.py  install.bat  install.sh  prompt.md  pyproject.toml  reassert_pref_patch.diff  requirements.txt  result.csv  sample_data.yml  sample_input_forms.csv  setup.py  test_installation.py  test_output_dry.csv
content-agent2/_tmp/: result.csv
content-agent2/form_filler/: __init__.py  auto_select.py  captcha.py  cli.py  consent.py  constants.py  core.py  core.py.backup  filling.py  logging_setup.py  mapping.py  models.py  selectors.py  success.py  utils.py
content-agent2/lexicon/: base_synonyms.yml  custom_synonyms.yml  new_suggestions.csv  suggestions.csv
content-agent2/scripts/: merge_suggestions.py
content-agent2/tests/: test_core.py
license-key/: .env.example  README.md  firestore-schema.md  generate-key.js  middleware.ts  next.config.js  package-lock.json  package.json  prompt.md
license-key/app/: layout.tsx  page.tsx
license-key/prisma/: schema.prisma
license-key/types/: nodemailer.d.ts  react-dom.d.ts
purchase-page/: .env.test  DIRECTORY_STRUCTURE.md  README.md  env.example  firestore-schema.md  jest.config.js  next.config.js  package-lock.json  package.json  prompt.md  tsconfig.json  vercel.json
purchase-page/app/: layout.tsx  page.tsx
purchase-page/components/: FormFields.tsx  (+2 more)
(+80 files in other folders)
